k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: hackmanite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: 172.29.32.1:5001/hackmanite-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: hackmanite-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: hackmanite
spec:
  ports:
    - port: 3000
  selector:
    app: web
